--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+* {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+body {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
